--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -7,11 +7,27 @@
     <div class="container mt-5">
         
         <div class="sin">
-            <button class="text-center"><a href="{% url 'create_profile' %}" style="list-style: none;font-size: x-large;font-weight: 900;">Create Profile</a></button>
+            <button class="text-center"><a href="{% url 'create_dataset1' %}" style="list-style: none;font-size: x-large;font-weight: 900;">Create Dataset1</a></button>
         </div>
         <br>
         <div class="sin">
-            <button class="text-center"><a href="/profile/" style="color: #834641; list-style: none;font-size: x-large;font-weight: 900;"> View Profiles</a></button>
+            <button class="text-center"><a href="{% url 'create_dataset2' %}" style="list-style: none;font-size: x-large;font-weight: 900;">Create Dataset2</a></button>
+        </div>
+        <br>
+        <div class="sin">
+            <button class="text-center"><a href="{% url 'create_dataset3' %}" style="list-style: none;font-size: x-large;font-weight: 900;">Create Dataset3</a></button>
+        </div>
+        <br>
+        <div class="sin">
+            <button class="text-center"><a href="{% url 'dataset1' %}" style="color: #834641; list-style: none;font-size: x-large;font-weight: 900;"> View Dataset1</a></button>
+        </div>
+        <br>
+        <div class="sin">
+            <button class="text-center"><a href="{% url 'dataset2' %}" style="color: #834641; list-style: none;font-size: x-large;font-weight: 900;"> View Dataset1</a></button>
+        </div>
+        <br>
+        <div class="sin">
+            <button class="text-center"><a href="{% url 'dataset3' %}" style="color: #834641; list-style: none;font-size: x-large;font-weight: 900;"> View Dataset1</a></button>
         </div>
        
     </div>
