--- a/api/templates/createDataset2.html
+++ b/api/templates/createDataset2.html
@@ -32,7 +32,7 @@
 
                     <form action="{%url 'create_dataset2'%}" method="post" enctype="multipart/form-data">
                         {%csrf_token%} {% bootstrap_form form%}
-                        <input type="submit" class="btn btn-dark" value="Create Profile" />
+                        <input type="submit" class="btn btn-dark" value="Create Dataset2" />
                     </form>
                 </div>
             </div>
